<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">X Control Lite</string>
    <string name="xcontrollite">X Control Lite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Header Strings -->
    <string name="category_general">General</string>
    <string name="category_statusbar">Statusbar</string>
    <string name="category_about_eclipse">About</string>
    <string name="category_clock">Clock</string>
    <string name="category_toggles">Toggles</string>
    <string name="category_battery">Battery</string>
    <string name="category_signal">Signal bars</string>

    <!-- About -->
    <string name="eclipse">Elemental X Designs</string>
    <string name="eclipse_website_title">Eclipse website</string>
    <string name="eclipse_website_summary">www.elementalxdesigns.com</string>
    <string name="about_eclipse">About Eclipse</string>
    <string name="about_eclipse_summary">@null</string>
    <string name="donate">Donate</string>
    <string name="donate_eclipse_summary">Support Elemental X Designs</string>
    <string name="eclipse_twitter_title">Twitter</string>
    <string name="eclipse_twitter_summary">Follow me!</string>
    <string name="url_twitter">https://twitter.com/nitroglycerin33</string>
    <string name="donate_eclipse">http://www.elementalxdesigns.com/eclipse/misc.php?do=donate</string>
    <string name="url_eclipse_donate">http://www.elementalxdesigns.com/eclipse/misc.php?do=donate</string>
    <string name="github_eclipse">https://github.com/nitroglycerine33</string>
    <string name="url_eclipse">http://elementalxdesigns.com</string>

    <!-- Color Picker -->
    <string name="dialog_color_picker">Color picker</string>
    <string name="press_color_to_apply">Press on color to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#FF000000</string>
    <string name="set">Set</string>
    <string name="default_color">Default</string>

    <!-- Time -->
    <string name="time_0_5_seconds">.5 seconds</string>
    <string name="time_1_second">1 second</string>
    <string name="time_2_seconds">2 seconds</string>
    <string name="time_5_seconds">5 seconds</string>

    <!-- General -->
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="center">Centered</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="ram_bar_title">Recents RAM bar</string>
    <string name="ram_bar_summary">Shows RAM usage in the recent apps window</string>

    <!-- Statusbar -->
    <string name="category_statusbar_notification">Notifications</string>
    <string name="category_statusbar_battery">Battery</string>
    <string name="category_statusbar_clock">Clock</string>

    <string name="brightness_slider_title">Statusbar brightness slider</string>
    <string name="brightness_slider_summary">Slide finger across statusbar to change brightness. Disabled when auto-brightness is on.</string>
    <string name="notification_count_title">Show notification count</string>
    <string name="notification_count_summary">Display number of pending notifications in the statusbar</string>

    <string name="statusbar_clock_am_pm_style_title">AM/PM style</string>
    <string name="statusbar_clock_am_pm_style_summary">How is AM/PM displayed</string>
    <string name="statusbar_clock_style_title">Clock style</string>
    <string name="statusbar_clock_style_summary">Clock position in statusbar</string>
    <string name="statusbar_clock_weekday_title">Day of the week</string>
    <string name="statusbar_clock_weekday_summary">Display day of the week front of clock</string>
    <string name="right_clock">Right clock</string>
    <string name="center_clock">Center clock</string>
    <string name="no_clock">No clock</string>
    <string name="dont_show">Don\'t show</string>
    <string name="small_am_pm">Small AM/PM</string>
    <string name="regular_am_pm">Regular AM/PM</string>
    <string name="small_weekday">Small weekday</string>
    <string name="regular_weekday">Regular weekday</string>
    <string name="statusbar_clock_color_title">Clock color</string>
    <string name="statusbar_clock_color_summary">Clock color displayed in statusbar</string>

    <string name="battery_percentage_indicator_title">Show battery % indicator</string>
    <string name="battery_percentage_indicator_summary">Show battery percentage indicator front of battery icon</string>
    <string name="battery_percentage_indicator_plugged_title">Indicate charging</string>
    <string name="battery_percentage_indicator_plugged_summary">Show battery percentage indicator in different color during charging</string>
    <string name="hide_battery_icon_title">Hide battery icon</string>
    <string name="hide_battery_icon_summary">Completly hide battery icon from statusbar</string>

    <string name="category_signalbars">Signal Bars</string>
    <string name="statusbar_signal_text_title">Show signal text</string>
    <string name="statusbar_signal_text_summary">Show signal with dBm</string>
    <string name="statusbar_hide_signal_bars_title">Hide Signal Bars</string>
    <string name="statusbar_hide_signal_bars_summary">Ability to hide the signal bars</string>

    <string name="status_bar_network_title">Network traffic</string>
    <string name="status_bar_show_network_stats_title">Show network speeds</string>
    <string name="status_bar_show_network_stats_summary">Show network speeds in statusbar</string>
    <string name="status_bar_network_stats_update_title">Update frequency</string>
    <string name="status_bar_network_stats_update_summary">How often is indicator updated</string>
    <string name="status_bar_network_stats_color_title">Network speeds text color</string>
    <string name="status_bar_network_stats_color_summary">Network speeds text color in statusbar</string>


    <!-- Toggles -->
    <string name="title_toggles">Toggles</string>
    <string name="toggles_style_tile">Tiles</string>
    <string name="toggles_style_traditional">Traditional pulldown</string>
    <string name="toggles_style_scrollable">Traditional scrollable</string>
    <string name="toggles_display_close">Close</string>

    <string name="toggles_order_title">Toggle order</string>
    <string name="toggles_order_summary">Choose the order in which your toggles are displayed</string>

    <string name="toggle_dialog_arrange_title">Toggle setup</string>
    <string name="toggle_dialog_add_toggles">Add a toggle</string>
    <string name="toggle_swap_handle_side">Drag handle on right</string>
    <string name="toggles_style_title">Toggle style</string>
    <string name="toggles_per_row_title">Toggles per row</string>
    <string name="toggles_per_row_three">3</string>
    <string name="toggles_per_row_four">4</string>
    <string name="toggles_per_row_five">5</string>
    <string name="add_toggles">Add toggle</string>

    <string name="toggles_enable_fasttoggle_title">Enable fast toggle</string>
    <string name="toggles_enable_fasttoggle_summary">Overrides default behavior</string>
    <string name="toggles_choose_fasttoggle_side_title">Choose fast toggle side</string>
    <string name="toggles_choose_fasttoggle_side_summary">Select the side that triggers the fast toggle</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="toggles_swipe_to_switch_title">Swipe to switch</string>
    <string name="toggles_swipe_to_switch_summary">Swipe to switch between notifications and Quick Settings</string>
    <string name="toggle_tab_arrange">Toggle setup</string>
    <string name="toggles_tab_settings">Configure</string>
    <string name="toggles_arrange_instructions">Rearrange by dragging by the handle on the right. Remove by swiping.</string>

    <string name="toggles_collapse_generic_title">Collapse shade on toggle click</string>
    <string name="toggles_collapse_generic_summary">Close shade on all generic toggle actions</string>
    <string name="toggles_vibrate_title">Vibrate on toggle click</string>
    <string name="toggles_vibrate_summary">Vibrate on all generic toggle actions</string>

    <string name="toggle_favcontact_title">Favorite contact</string>
    <string name="toggle_favcontact_summary">Choose your favorite contact</string>

</resources>
