<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:eclipse="http://schemas.android.com/apk/res-auto"

            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout style="@style/settingsFragmentStyle">

        <com.eclipse.xcontrollite.widgets.CategorySeparator
            style="@style/defaultSize"
            android:title="@string/category_signalbars"/>

        <com.eclipse.xcontrollite.settings.CheckboxSetting
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:title="@string/statusbar_signal_text_title"
            android:summary="@string/statusbar_signal_text_summary"
            android:key="statusbar_signal_text"
            />

        <com.eclipse.xcontrollite.settings.CheckboxSetting
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:title="@string/statusbar_hide_signal_bars_title"
                android:summary="@string/statusbar_hide_signal_bars_summary"
                android:key="statusbar_hide_signal_bars"
                />

        <com.eclipse.xcontrollite.widgets.CategorySeparator
                style="@style/defaultSize"
                android:title="@string/status_bar_network_title"/>

        <com.eclipse.xcontrollite.settings.CheckboxSetting
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:title="@string/status_bar_show_network_stats_title"
                android:summary="@string/status_bar_show_network_stats_summary"
                android:key="status_bar_network_stats"
                android:defaultValue="false"
                />

        <com.eclipse.xcontrollite.settings.ColorPickerSetting
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/status_bar_network_stats_text_color"
                android:title="@string/status_bar_network_stats_color_title"
                android:summary="@string/status_bar_network_stats_color_summary"
                android:key="status_bar_network_stats_text_color"
                eclipse:colorPickerDefaultValue="@android:color/white"
                eclipse:colorPickerShowAlphaSlider="false"
                />

        <com.eclipse.xcontrollite.settings.SingleChoiceSetting
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:title="@string/status_bar_network_stats_update_title"
                android:summary="@string/status_bar_network_stats_update_summary"
                android:key="status_bar_network_stats_update_frequency"

                android:entries="@array/entries_status_bar_network_stats_update"
                android:entryValues="@array/values_status_bar_network_stats_update"
                />

    </LinearLayout>

</ScrollView>
