<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:eclipse="http://schemas.android.com/apk/res-auto"

            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout style="@style/settingsFragmentStyle">

        <com.eclipse.xcontrollite.settings.SingleChoiceSetting
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/statusbar_clock_style"

                android:title="@string/statusbar_clock_style_title"
                android:summary="@string/statusbar_clock_style_summary"
                android:key="statusbar_clock_style"

                android:entries="@array/statusbar_clock_styleEntries"
                android:entryValues="@array/statusbar_clock_styleValues"
                />

        <com.eclipse.xcontrollite.settings.SingleChoiceSetting
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/statusbar_clock_am_pm_style"

                android:title="@string/statusbar_clock_am_pm_style_title"
                android:summary="@string/statusbar_clock_am_pm_style_summary"
                android:key="statusbar_clock_am_pm_style"

                android:entries="@array/statusbar_clock_am_pm_styleEntries"
                android:entryValues="@array/statusbar_clock_am_pm_styleValues"
                />

        <com.eclipse.xcontrollite.settings.SingleChoiceSetting
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/statusbar_clock_weekday"

                android:title="@string/statusbar_clock_weekday_title"
                android:summary="@string/statusbar_clock_weekday_summary"
                android:key="statusbar_clock_weekday"

                android:entries="@array/statusbar_clock_weekdayEntries"
                android:entryValues="@array/statusbar_clock_weekdayValues"
                />

        <com.eclipse.xcontrollite.settings.ColorPickerSetting
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/statusbar_clock_color"
                android:title="@string/statusbar_clock_color_title"
                android:summary="@string/statusbar_clock_color_summary"
                android:key="statusbar_clock_color"
                eclipse:colorPickerDefaultValue="@android:color/white"
                eclipse:colorPickerShowAlphaSlider="false"
                />

    </LinearLayout>

</ScrollView>
