<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:eclipse="http://schemas.android.com/apk/res-auto"

            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout style="@style/settingsFragmentStyle">

        <com.eclipse.xcontrollite.settings.CheckboxSetting
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/battery_percentage_indicator"
                android:title="@string/battery_percentage_indicator_title"
                android:summary="@string/battery_percentage_indicator_summary"
                android:key="battery_percentage_indicator"
                android:defaultValue="false"
                />

        <com.eclipse.xcontrollite.settings.CheckboxSetting
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/battery_percentage_indicator_plugged"
                android:title="@string/battery_percentage_indicator_plugged_title"
                android:summary="@string/battery_percentage_indicator_plugged_summary"
                android:key="battery_percentage_indicator_plugged"
                android:defaultValue="false"
                />

        <com.eclipse.xcontrollite.settings.CheckboxSetting
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:title="@string/hide_battery_icon_title"
                android:summary="@string/hide_battery_icon_summary"
                android:key="hide_battery_icon"
                android:defaultValue="false"
                />

    </LinearLayout>

</ScrollView>
